# dvue

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  README-mathref.md  README.md  environment.yml  environment_dev.yml  pyproject.toml  setup.py  test_plugin_loading.py  test_sync_compat.py
.github/: animator-design.md  animator-user-guide.md  implementors-guide.md  math-ref-editor-plan.md  mixed-catalog-registry-plan.md  plugin-entry-points.md  reader-registry-architecture.md  reader-registry-design.md  session-management.md  session-persistence-plan.md  slicing-readers.md  transform-to-catalog-plan.md
.github/instructions/: dvue-subclass.instructions.md
.github/workflows/: python-package-conda.yml  python-package-pip.yml
conda.recipe/: meta.yaml
docs/: Architecture.md  dvue_presentation.md  dvue_user_presentation.md
dvue/: __init__.py  actions.py  catalog.py  cli.py  dataui.py  math_ref_editor.py  math_reference.py  plotutils.py  readers.py  registry.py  registry_ui.py  session_persistence.py  tsdataui.py  utils.py  views.py
dvue/animator/: __init__.py  multi_ui.py  reader.py  ui.py
dvue/assets/: create_icon.py
examples/: ex_basic_tsdataui.py  ex_catalog_reader.py  ex_drag_drop_desktop.py  ex_geo_animator.py  ex_readers.py  ex_report_action.py  ex_tsdataui.py  ex_tsdataui_desktop.py  ex_url_state_reset.py
examples/data/: math_refs.yaml  math_refs_search_map.yaml  math_refs_tsdataui.yaml
examples/sample_mathrefs/: README.md  mathref_dss_cz_godin.yaml  mathref_source_num.yaml  mathref_url_num.yaml  mathrefs_total_exports.yaml
tests/: README.md  conftest.py  test_animator.py  test_catalog.py  test_cli_ui_manager_selection.py  test_dataui_geo_selection.py  test_math_ref_editor.py  test_registry_ui_columns.py  test_report_action.py  test_source_compare_action.py  test_tsdataui.py  test_utils.py  test_views.py
