[build-system]
requires = ["setuptools>=64.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dvue/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.1.0"

[project]
name = "dvue"
dynamic = ["version"]
description = "Data Visualization and UI components for interactive data exploration with Panel, HoloViews, and GeoViews"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Nicky Sandhu", email = "psandhu@water.ca.gov"}
]
keywords = ["data-visualization", "panel", "holoviews", "geoviews", "interactive", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "pandas>=1.3.0",
    "geopandas>=0.10.0",
    "panel>=1.0.0",
    "holoviews>=1.15.0",
    "hvplot>=0.8.0",
    "geoviews>=1.9.0",
    "bokeh>=2.4.0",
    "param>=1.12.0",
    "cartopy>=0.20.0",
    "colorcet>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/CADWRDeltaModeling/dvue"
Documentation = "https://github.com/CADWRDeltaModeling/dvue#readme"
"Bug Reports" = "https://github.com/CADWRDeltaModeling/dvue/issues"
"Source Code" = "https://github.com/CADWRDeltaModeling/dvue"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["dvue*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
dvue = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=dvue --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
